# wsyscall-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.MD  build.rs
src/: dynamic_invoke.rs  lib.rs  obf.rs  sus_functions.rs  syscall.rs
src/direct/: mod.rs  process.rs
src/utils/: cache.rs  mod.rs  wintypes.rs
